--- a/css/sections/portfolio.css
+++ b/css/sections/portfolio.css
@@ -15,4 +15,6 @@
 .portfolio-row .portfolio-col .portfolio-subtitle { color: #737373; font-size: 14px; font-style: italic; font-family: 'Merriweather', serif; text-align: center; margin-bottom: 29px; }
 
 @media (max-width: 974px) { .portfolio-row { display: flex; flex-direction: column; margin-top: 0; }
-  .portfolio-row .portfolio-col { align-self: center; margin-bottom: 20px; } }
+  .portfolio-row .portfolio-col { align-self: center; margin-bottom: 40px; }
+  .portfolio-row .portfolio-col:hover { border-radius: 5px; }
+  .portfolio-row .portfolio-col:hover img { border-top-left-radius: 5px; border-top-right-radius: 5px; } }
