--- a/sass/sections/portfolio.scss
+++ b/sass/sections/portfolio.scss
@@ -50,7 +50,16 @@
     
             .portfolio-col {
                 align-self: center;
-                margin-bottom: 20px;
-            }
+                margin-bottom: 40px;
+                
+                &:hover {
+                    border-radius: 5px;
+                    
+                    img {
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                    }
+                }                 
+            }                    
         }
     }    
