--- a/sass/sections/jumbotron.scss
+++ b/sass/sections/jumbotron.scss
@@ -78,6 +78,14 @@
         }
     }
 
+    @media (min-width:1051px) and (max-width:1510px) {
+        .welcome {
+            margin-top: 15%;
+        }
+        .jumbo-button {
+            margin-bottom: 15%;
+        }
+    }
     @media (max-width:1050px) {                     
         .header {
             .menu {
